# robot_orbbec_femto_source

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  GEMINI.md  LICENSE  README.md  ROS2_INTEGRATION.md  TEST_PLAN.md  docker-compose.yml  full_project_modifications_v3.patch  full_project_modifications_v5.patch  verify.sh  verify_integrated.sh
ros2_bridge/: CMakeLists.txt  package.xml
ros2_bridge/launch/: femto_mega.launch.py
ros2_bridge/src/: femto_mega_node.cpp
tests/: CMakeLists.txt  test_argparse.cpp  test_h264_encoder.cpp  test_sbs_compositor.cpp
verification_tool/: .gitignore  CMakeLists.txt  README.md  argparse.hpp  verify_camera.cpp  view_camera.cpp  view_sbs.cpp
webrtc_streamer/: CMakeLists.txt  README.md
webrtc_streamer/src/: h264_encoder.hpp  main.cpp  sbs_compositor.hpp  signaling_server.cpp
webrtc_streamer/web/: index.html
