<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>femto_mega_bridge</name>
  <version>1.0.0</version>
  <description>ROS 2 bridge for Orbbec Femto Mega with Color, Depth, IMU, and Point Cloud support.</description>
  <maintainer email="patrick.lin@example.com">Patrick Lin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
